# clinical-calculators

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml
api/: __init__.py  main.py
calculators/: bmi.py  dcct_ifcc.py
cli/: __init__.py  main.py
core/: __init__.py  loader.py  metadata.py
core/request/: request.py
core/response/: response.py
docs/: README.md
s/: deploy.sh  dev.sh  test.sh
tests/: test_bmi.py  test_dcct_ifcc.py
